updated the game

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <p>Sausages Remaining: <span id="remaining-sausages">0</span></p>
             <button id="play-again-btn">Play Again</button>
         </div>
+        <div class="mode-select">
+            <button class="mode-btn" data-mode="classic">Classic Mode</button>
+            <button class="mode-btn" data-mode="frenzy">Frenzy Mode</button>
+            <button class="mode-btn" data-mode="boss">Boss Battle</button>
+            <button class="mode-btn" data-mode="survival">Survival Mode</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
